--- a/memo/221101.md
+++ b/memo/221101.md
@@ -8,8 +8,20 @@
   ▫️ 스프링 데이터 JPA 제공 기능
 
     👉🏻 인터페이스를 통한 기본적인 CRUD
+
     👉🏻 `findByName()`, `findByEmail()` 처럼 메서드 이름 만으로 조회 기능 제공
+
     👉🏻 페이징 기능 자동 제공
+
+
+
+🟨 AOP
+    👉🏻 Aspect Oriented Programming
+
+    👉🏻 공통 관심 사항 (cross-cutting concern) vs 핵심 관심 사항 (core concern) 분리
+
+
+
 
 
 
